fixes overlapping cards

--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -50,7 +50,7 @@
     align-items: center;
 }
 .swiper{
-  width: 35vw;
+  width: 40%;
 }
 /* -------- */
 
